# ai-agent-roi-framework

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  index.html  linkedin-post.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  use_case_submission.md
.github/workflows/: ci.yml  release.yml
assets/: index-BMTFjGUn.js  index-BukvMfRP.css  index-CTW4TGJB.css  index-CjjbGYxN.js  index-DWw91uAM.js  index-elV9GjLA.js
benchmarks/: README.md  schema.json
benchmarks/financial-services/: fraud-detection.json
benchmarks/government/: permit-processing.json
benchmarks/healthcare/: patient-triage.json
benchmarks/manufacturing/: quality-control.json
benchmarks/retail/: customer-service.json
calculators/python/: README.md  pyproject.toml  requirements.txt  setup.py
calculators/python/aura_roi/: __init__.py  baseline.py  calculator.py  cli.py  industry_presets.py  models.py  safety_adjusted.py  tco.py  visualizations.py
calculators/python/tests/: __init__.py  test_calculations.py  test_models.py  test_scenarios.py
calculators/web-app/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
calculators/web-app/src/: App.jsx  index.css
calculators/web-app/src/components/: AdvancedSettings.jsx  BaselineCapture.jsx  CompareScenarios.jsx  CostsInput.jsx  MonteCarloResults.jsx  (+6 more)
docs/getting-started/: quickstart.md
docs/methodology/: five-value-dimensions.md  maturity-model.md  overview.md  risk-adjustment.md
examples/customer-service-agent/: analysis.md  scenario.json
examples/document-processing/: scenario.json
examples/fraud-detection/: scenario.json
examples/healthcare-triage/: scenario.json
examples/supply-chain-optimization/: scenario.json
frameworks/: README.md
frameworks/eu-ai-act/: mapping.json
frameworks/nist-ai-rmf/: mapping.json
(+6 files in other folders)
