[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aura-roi"
version = "1.0.0"
description = "AURA Framework - AI Utility & Return Assessment for calculating ROI on AI Agent projects"
readme = "../../README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "Karthik Sukumar", email = "karthik.sukumar@oracle.com"}
]
keywords = ["ai", "roi", "agent", "automation", "business-case"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
visualization = ["matplotlib>=3.5.0", "plotly>=5.0.0"]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0", "black>=23.0.0", "mypy>=1.0.0"]
all = ["matplotlib>=3.5.0", "plotly>=5.0.0", "pandas>=1.5.0", "numpy>=1.21.0"]

[project.scripts]
aura = "aura_roi.cli:main"

[project.urls]
Homepage = "https://github.com/your-username/ai-agent-roi-framework"
Documentation = "https://github.com/your-username/ai-agent-roi-framework/docs"
Repository = "https://github.com/your-username/ai-agent-roi-framework"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=aura_roi --cov-report=term-missing"
